[tool.poetry]
name = "cloudmapper"
version = "2.1.0"
description = "CloudMapper helps you analyze your Amazon Web Services (AWS) environments."
authors = ["Scott Piper <0xdabbad00@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
astroid = "^2.11.3"
Pillow = "^9.1.0"
boto3 = "^1.21.43"
autoflake = "^1.4"
autopep8 = "^1.6.0"
certifi = "^2021.10.8"
chardet = "^4.0.0"
coverage = "^6.3.2"
pyflakes = "^2.4.0"
typing-extensions = "^4.2.0"
urllib3 = "^1.26.9"
wrapt = "^1.14.0"
typed-ast = "^1.5.3"
pytz = "^2022.1"
mock = "^4.0.3"
MarkupSafe = "^2.1.1"
charset-normalizer = "^2.0.12"
cycler = "^0.11.0"
docutils = "^0.18.1"
idna = "^3.3"
isort = "^5.10.1"
Jinja2 = "^3.1.1"
jmespath = "^1.0.0"
json-cfg = "^0.4.2"
kiwisolver = "^1.4.2"
kwonly-args = "^1.0.10"
matplotlib = "^3.5.1"
mccabe = "^0.7.0"
netaddr = "^0.8.0"
nose = "^1.3.7"
parliament = "^1.5.2"
pylint = "^2.13.6"
pyparsing = "^3.0.8"
python-dateutil = "^2.8.2"
requests = "^2.27.1"
s3transfer = "^0.5.2"
six = "^1.16.0"
toml = "^0.10.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
